--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,8 @@
-@import "config/variables.scss";
+@import "config/_variables.scss";
+@import "config/reset.scss";
+@import "main.scss";
 
-body {
-  background-color: $sexyColor;
-}
+@import "partials/footer.scss";
+@import "partials/form.scss";
+@import "partials/header.scss";
+@import "partials/socialLogin.scss";
