--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -3,7 +3,7 @@
         span
             i.fab.fa-github
         |     Continue with Github
-    button.social-login__facebook
+    button.social-login--facebook
         span
             i.fab.fa-facebook-square
         |     Continue with Facebook       
