--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -21,8 +21,8 @@
     background-color: $black;
     color: white;
   }
-  .social-login--facebook {
-    background-color: #3a5998;
+  .social-login--naver {
+    background-color: #01c73b;
     color: white;
   }
 }
