--- a/static/styles.css
+++ b/static/styles.css
@@ -397,8 +397,8 @@ input[type="submit"] {
   .social-login .social-login--github {
     background-color: #444444;
     color: white; }
-  .social-login .social-login--facebook {
-    background-color: #3a5998;
+  .social-login .social-login--naver {
+    background-color: #01c73b;
     color: white; }
 
 .videoBlock video {
